--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,23 @@
+@mixin mobile{
+    @media screen and (max-width: 480px){
+        @content
+    }
+}
+
+@mixin tablet{
+    @media screen and (max-width: 760px){
+        @content
+    }
+}
+
+@mixin desktop{
+    @media screen and (max-width: 1200px){
+        @content
+    }
+}
+
+$darkMode: #2f2d52;
+
 .formContainer{
     background-color: #95c8d5;
     height: 100vh;
@@ -86,10 +106,14 @@
         height: 80%;
         display: flex;
         overflow: hidden;
+        @include tablet{
+            width: 90%;
+        }
 
         .sidebar{
             flex: 1;
             background-color: #3e3c61;
+            position: relative;
 
             .navbar{
                 display: flex;
@@ -102,6 +126,9 @@
                 
                 .logo{
                     font-weight: bold;
+                    @include tablet{
+                        display: none;
+                    }
                 }
 
                 .user{
@@ -122,6 +149,10 @@
                         font-size: 10px;
                         border: none;
                         cursor: pointer;
+                        @include tablet{
+                            position: absolute;
+                            bottom: 10px;
+                        }
                     }
                 }
 
